# Idk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HERMES.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  USER-GUIDE.md  codex.md  config.yaml  install.sh  pyproject.toml  setup.sh  void-posture.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: seal.yml
scripts/: config.py  decoding.py  idk_state.py  idk_tick.py  xyzab_state.py
skills/idk/: SKILL.md
skills/idk/references/: 25-commutations.md  article-craft-pattern.md  article-writing.md  audit-validation-pattern.md  backup-github.md  companion-article-writing.md  cycle-11-strategic-infrastructure.md  cycle-23-the-fork-inhabited.md  cycle-40-secure-commons-prompt.md  cycle-to-strategy-docs.md  cycle-trail-format.md  decoding-setup.md  decoding.md  external-research-prompt-pattern.md  footer-format.md  install-host.md  landing-page-review.md  public-vs-private-artifacts.md  question-gallery-strategy.md  repo-topology.md  research-resilience.md  structural-article-analysis.md  trail-commons-architecture.md
skills/idk/start-guide/: SKILL.md
tests/: check_links.py  conftest.py  test_config.py  test_decoding.py  test_gate_machine.py  test_l4_threshold.py  test_links.py
