[project]
name = "idk-5qln"
description = "The sealed /idk core: Codex, gate machine, Void watchdog."
requires-python = ">=3.8"
license = { text = "5QLN Source-Available License" }
dynamic = ["version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
